--- a/files/custom/yaml/v480.yaml
+++ b/files/custom/yaml/v480.yaml
@@ -5298,7 +5298,8 @@ methods:
                 default: true
             -
                 name: type
-                types: string
+                types:
+                    - string
                 optional: true
                 description: 'Poll type, “quiz” or “regular”, defaults to “regular”'
                 default: regular
